--- a/cs-collaboration-platform/src/app/app.component.html
+++ b/cs-collaboration-platform/src/app/app.component.html
@@ -1,131 +1,1 @@
-<body class="black-skin">
-<!--Double navigation-->
-<header>
-
-    <!-- Sidebar navigation -->
-    <mdb-sidenav #sidenav class="sn-bg-1" [fixed]="false">
-
-        <logo>
-            <li>
-                <div class="logo-wrapper waves-light">
-                    <a href="#">
-                        <img src="http://www.franklinpracticum.com/course/images/FranklinLogo.gif" class="img-fluid flex-center">
-                    </a>
-					<strong>Practicum: Team Delta</strong>
-                </div>
-            </li>
-            <!--/. Logo -->
-			
-        </logo>
-
-        <links>
-            
-            <!-- Side navigation links -->
-            <li>
-                <ul class="collapsible collapsible-accordion">
-                    <mdb-squeezebox [multiple]="false" aria-multiselectable="false">
-
-                        <!-- Collapsible link -->
-                        <mdb-item>
-                            <mdb-item-head mdbWavesEffect>
-                                <i class="fa fa-chevron-right"></i> Enter Workspace</mdb-item-head>
-                            <mdb-item-body>
-                                <ul>
-                                    <li>
-                                        <a href="#" class="waves-effect" mdbWavesEffect>Public</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="waves-effect" mdbWavesEffect>Private</a>
-                                    </li>
-                                </ul>
-                            </mdb-item-body>
-                        </mdb-item>
-
-
-                    </mdb-squeezebox>
-                </ul>
-            </li>
-            <!--/. Side navigation links -->
-        </links>
-        <div class="sidenav-bg mask-strong"></div>
-    </mdb-sidenav>
-    <!--/. Sidebar navigation -->
-
-    <!-- Navbar -->
-    <mdb-navbar SideClass="navbar fixed-top navbar-toggleable-md navbar-expand-lg scrolling-navbar double-nav" [containerInside]="false">
-
-        <navlinks class="navbar-container">
-            <!-- SideNav slide-out button -->
-            <div class="float-left">
-                <a (click)="sidenav.show()" class="button-collapse hidden-nav-button-collapse">
-                    <i class="fa fa-bars"></i>
-                </a>
-            </div>
-            <!--/. SideNav slide-out button -->
-        </navlinks>
-
-        <logo>
-            <!-- Breadcrumb-->
-            <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
-                <p>CS Student Collabortation Platform</p>
-            </div>
-            <!--/. Breadcrumb-->
-			<div *ngIf="this.user | async" class="dropdown" dropdown>
-
-		<!--Trigger-->
-		<button dropdownToggle class="btn btn-dark dropdown-toggle waves-light" type="button" mdbWavesEffect>
-        {{ (this.user | async)?.email }}
-		</button>
-
-		<!--Menu-->
-		<div class="dropdown-menu dropdown-primary">
-        <a class="dropdown-item" (click)="logout()" href="#">Logout</a>
-		</div>
-		</div>
-        </logo>
-
-        <navlinks>
-            <ul class="nav navbar-nav nav-flex-icons ml-auto ie-double-nav ie-hidden-double-nav">
-                <li class="nav-item">
-                    <a class="nav-link waves-light" mdbWavesEffect>
-                        <i class="fa fa-envelope"></i>
-                        <span class="clearfix d-none d-sm-inline-block">Contact</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-light" mdbWavesEffect>
-                        <i class="fa fa-comments-o"></i>
-                        <span class="clearfix d-none d-sm-inline-block">Groups</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-light" mdbWavesEffect>
-                        <i class="fa fa-user"></i>
-                        <span class="clearfix d-none d-sm-inline-block">Connections</span>
-                    </a>
-                </li>
-                <li class="nav-item dropdown btn-group" dropdown>
-                    <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                        Login/Register
-                    </a>
-                    <div class="dropdown-menu dropdown-primary dropdown-menu-right" role="menu">
-                        <a class="dropdown-item" (click)="googleSignIn()" href="#">Sign in with google</a>
-                    </div>
-                </li>
-            </ul>
-        </navlinks>
-    </mdb-navbar>
-    <!--/. Navbar -->
-
-</header>
-<!--/.Double navigation-->
-
-<!--Main Layout-->
-<main>
-    <div class="container-fluid mt-5">
-        <h2>Welcome Dudes</h2>
-       
-        <div style="height: 2000px"></div>
-    </div>
-</main>
-<!--/Main layout-->
+<app-nav></app-nav>
