Added User tables and Jubmostron Ryan Created. Login works. No routing in this build
Signed-off-by: teamdelta2018 <franklinpracticum2018@gmail.com>

--- a/cs-collaboration-platform/src/app/nav/nav.component.html
+++ b/cs-collaboration-platform/src/app/nav/nav.component.html
@@ -125,7 +125,7 @@
 <main>
     <div class="container-fluid mt-5">
         <h2>Welcome Dudes</h2>
-       
+        <app-home></app-home>
         <div style="height: 2000px"></div>
     </div>
 </main>
