--- a/cs-collaboration-platform/src/app/nav/nav.component.html
+++ b/cs-collaboration-platform/src/app/nav/nav.component.html
@@ -37,6 +37,9 @@
                                     <li>
                                         <a routerLink="/private" routerLinkActive="active" href="#" class="waves-effect" mdbWavesEffect>Private</a>
                                     </li>
+									<li>
+                                        <a routerLink="/demo" routerLinkActive="active" href="#" class="waves-effect" mdbWavesEffect>Demo</a>
+                                    </li>
                                 </ul>
                             </mdb-item-body>
                         </mdb-item>
