added some css to home component table
Signed-off-by: teamdelta2018 <franklinpracticum2018@gmail.com>

--- a/cs-collaboration-platform/src/app/demo/demo.component.html
+++ b/cs-collaboration-platform/src/app/demo/demo.component.html
@@ -6,3 +6,11 @@
       {{ item.email }}  {{item.admin}}
     </li>
   </ul>
+  
+  <ul>
+    <li *ngFor="let current of currents | async">
+      {{current.email}}
+    </li>
+  </ul>
+  
+ 
