--- a/cs-collaboration-platform/src/app/home/home.component.html
+++ b/cs-collaboration-platform/src/app/home/home.component.html
@@ -1,31 +1,35 @@
 <div class="row">
     <div class="column" style="float:left; width:74%; margin-right:1%; background-color:black; border:2px solid black; border-radius:5px;">
         <div class="card card-image">
-            <div class="text-white text-center py-5 px-4 my-5" style="color:white;">
+            <div class="text-black text-center py-5 px-4 my-5" style="color:rgb(20, 19, 19);">
                 <div>
                     <h1 class="card-title pt-3 mb-5 font-bold" style="text-align:center;"><strong>Welcome to the CS Collaboration Platform!</strong></h1>
                     <p class="mx-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat,
                     laboriosam, voluptatem, optio vero odio nam sit officia accusamus
                     minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
                     dolorum!.</p>
-                    <a class="btn btn-outline-white btn-rounded"><i class="fa fa-clone left"></i> View project</a>
+                    <a class="btn btn-outline-black btn-rounded"><i class="fa fa-clone left"></i> View project</a>
                 </div>
             </div>
         </div>
     </div>
     <div class="column" style="float:left; width:23%; background-color:black; border:2px solid black; border-radius:5px;">
         <div style="margin-bottom:10px;">
-            <h3 style="text-align:center; color:white">Online</h3>
-            <p style="color:white; margin-left:10px;"><b>Placeholder User #1</b><br><i>email: userone@teamdelta.com</i></p>
-            <p style="color:white; margin-left:10px;"><b>Placeholder User #2</b><br><i>email: usertwo@teamdelta.com</i></p>
-            <p style="color:white; margin-left:10px;"><b>Placeholder User #3</b><br><i>email: userthree@teamdelta.com</i></p>
-            <h3 style="text-align:center; color:white">Offline</h3>
-            <p style="color:white; margin-left:10px;"><b>Placeholder User #4</b><br><i>email: userfour@teamdelta.com</i></p>
-            <p style="color:white; margin-left:10px;"><b>Placeholder User #5</b><br><i>email: userfive@teamdelta.com</i></p>
-            <p style="color:white; margin-left:10px;"><b>Placeholder User #6</b><br><i>email: usersix@teamdelta.com</i></p>
-            <p style="color:white; margin-left:10px;"><b>Placeholder User #7</b><br><i>email: userseven@teamdelta.com</i></p>
-            <p style="color:white; margin-left:10px;"><b>Placeholder User #8</b><br><i>email: usereight@teamdelta.com</i></p>
-            <p style="color:white; margin-left:10px;"><b>Placeholder User #9</b><br><i>email: usernine@teamdelta.com</i></p>
+            <div class="online">
+            <h3>Online</h3>
+            <p><b>Placeholder User #1</b><br><i>email: userone@teamdelta.com</i></p>
+            <p><b>Placeholder User #2</b><br><i>email: usertwo@teamdelta.com</i></p>
+            <p><b>Placeholder User #3</b><br><i>email: userthree@teamdelta.com</i></p>
+            </div>
+            <div class="offline">
+            <h3>Offline</h3>
+            <p><b>Placeholder User #4</b><br><i>email: userfour@teamdelta.com</i></p>
+            <p><b>Placeholder User #5</b><br><i>email: userfive@teamdelta.com</i></p>
+            <p><b>Placeholder User #6</b><br><i>email: usersix@teamdelta.com</i></p>
+            <p><b>Placeholder User #7</b><br><i>email: userseven@teamdelta.com</i></p>
+            <p><b>Placeholder User #8</b><br><i>email: usereight@teamdelta.com</i></p>
+            <p><b>Placeholder User #9</b><br><i>email: usernine@teamdelta.com</i></p>
+            </div>
         </div>
     </div>
 </div>
