Worked on the visuals for the home page a little bit.
Signed-off-by: Ryan Coffey <coffey08@email.franklin.edu>

--- a/cs-collaboration-platform/src/app/home/home.component.html
+++ b/cs-collaboration-platform/src/app/home/home.component.html
@@ -1,28 +1,26 @@
 <div class="row">
-    <div class="column" style="float:left; width:74%; margin-right:1%; background-color:black; border:2px solid black; border-radius:5px;">
-        <div class="card card-image">
-            <div class="text-black text-center py-5 px-4 my-5" style="color:rgb(20, 19, 19);">
-                <div>
-                    <h1 class="card-title pt-3 mb-5 font-bold" style="text-align:center;"><strong>Welcome to the CS Collaboration Platform!</strong></h1>
-                    <p class="mx-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat,
-                    laboriosam, voluptatem, optio vero odio nam sit officia accusamus
-                    minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
-                    dolorum!.</p>
-                    <a class="btn btn-outline-black btn-rounded"><i class="fa fa-clone left"></i> View project</a>
-                </div>
+    <div class="jtron">
+        <div class="jcontent">
+            <div class="jmargins">
+                <h1 style="text-align:center;"><strong>Welcome to the CS Collaboration Platform!</strong></h1>
+                <p style="margin-top:20px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat,
+                laboriosam, voluptatem, optio vero odio nam sit officia accusamus
+                minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
+                dolorum!.</p>
+                <a class="btn btn-outline-black btn-rounded">View project</a>
             </div>
         </div>
     </div>
-    <div class="column" style="float:left; width:23%; background-color:black; border:2px solid black; border-radius:5px;">
-        <div style="margin-bottom:10px;">
+    <div class="userbar">
+        <div class="umargins">
             <div class="online">
-            <h3>Online</h3>
-            <p><b>Placeholder User #1</b><br><i>email: userone@teamdelta.com</i></p>
-            <p><b>Placeholder User #2</b><br><i>email: usertwo@teamdelta.com</i></p>
-            <p><b>Placeholder User #3</b><br><i>email: userthree@teamdelta.com</i></p>
+            <h3><b>Online</b></h3>
+            <p><a><b>Placeholder User #1</b><br><i>email: userone@teamdelta.com</i></a></p>
+            <p><a><b>Placeholder User #2</b><br><i>email: usertwo@teamdelta.com</i></a></p>
+            <p><a><b>Placeholder User #3</b><br><i>email: userthree@teamdelta.com</i></a></p>
             </div>
             <div class="offline">
-            <h3>Offline</h3>
+            <h3><b>Offline</b></h3>
             <p><b>Placeholder User #4</b><br><i>email: userfour@teamdelta.com</i></p>
             <p><b>Placeholder User #5</b><br><i>email: userfive@teamdelta.com</i></p>
             <p><b>Placeholder User #6</b><br><i>email: usersix@teamdelta.com</i></p>
