--- a/cs-collaboration-platform/src/app/home/home.component.scss
+++ b/cs-collaboration-platform/src/app/home/home.component.scss
@@ -1,21 +1,48 @@
 body {
     color: blue;
 }
-
 h3 {
     text-align: center;
 }
-
+.jtron {
+    width:74%; 
+    margin-right:1%;
+}
+.jmargins {
+    margin: 50px;
+}
+.jcontent {
+    text-align: center;
+    background-color: white;
+    border:2px solid black; 
+    border-radius:5px;
+}
 p {
     margin-left: 10px;
 }
+.userbar {
+    float:left; 
+    width:23%; 
+    background-color: black;
+    border:2px solid black; 
+    border-radius:5px;
+}
+.umargins {
+    margin-bottom:10px;
+}
 .online {
+    margin-top: 15px;
     color: green;
-    background-color: rgb(24, 66, 73)
-
+    background-color: rgb(24, 66, 73);
+    overflow: hidden;
+    white-space: nowrap;
+}
+a:hover {
+    color: white;
 }
 .offline {
     color: red;
-    background-color: bisque
-
+    background-color: bisque;
+    overflow: hidden;
+    white-space: nowrap;
 }
