Add user secion of left sidenav will display all users and allow you to add user with a franklin email and a uniuque userename betwwn 6 and 8 characters. Added routing for posts component.
Signed-off-by: teamdelta2018 <franklinpracticum2018@gmail.com>

--- a/cs-collaboration-platform/src/app/nav/nav.component.html
+++ b/cs-collaboration-platform/src/app/nav/nav.component.html
@@ -38,7 +38,10 @@
                                         <a routerLink="/private" routerLinkActive="active" href="#" class="waves-effect" mdbWavesEffect>Private</a>
                                     </li>
 									<li>
-                                        <a routerLink="/demo" routerLinkActive="active" href="#" class="waves-effect" mdbWavesEffect>Demo</a>
+                                        <a routerLink="/demo" routerLinkActive="active" href="#" class="waves-effect" mdbWavesEffect>Add User</a>
+                                    </li>
+                                    <li>
+                                        <a routerLink="/posts" routerLinkActive="active" href="#" class="waves-effect" mdbWavesEffect>Posts</a>
                                     </li>
                                 </ul>
                             </mdb-item-body>
