--- a/cs-collaboration-platform/src/app/demo/demo.component.html
+++ b/cs-collaboration-platform/src/app/demo/demo.component.html
@@ -4,14 +4,15 @@
       Email: {{item.email}} Username: {{item.username}} Admin: {{item.admin}}
     </li>
 </ul>
-email
-    
+email   
     <input #box type="email" [(ngModel)]="enterEmail" name="myEmail" #myEmail="ngModel" 
     email pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}" required>
     <p *ngIf="this.validEmail">{{box.value}} is a valid email</p>  
     <p *ngIf="!this.validEmail">{{box.value}} is invalid email</p>  
-username    
-  <input #box2 (keyup)="0">
+username
+    <input #box2 type="text" [(ngModel)]="enterUsername" name="myUsername" #myUsername="ngModel" 
+    username pattern="[a-zA-Z0-9.-_]{6,8}" required>    
+    <!-- <input #box2 (keyup)="0"> -->
     <p>{{box2.value}}</p>
     <p *ngIf="this.validUsername">{{box2.value}} is a valid username</p>  
     <p *ngIf="!this.validUsername">{{box2.value}} is invalid username</p>
