Added display of all posts and repsonses in posts component. Imported Authservice and Firestore. To access our database in reference to a certain logged in user.
Signed-off-by: teamdelta2018 <franklinpracticum2018@gmail.com>

--- a/cs-collaboration-platform/src/app/posts/posts.component.html
+++ b/cs-collaboration-platform/src/app/posts/posts.component.html
@@ -1,3 +1,35 @@
 <p>
   posts works!
 </p>
+<div *ngIf="authService.user | async">
+
+  <!--Trigger-->
+  <p>
+    {{ (authService.user | async)?.email }} posts
+  </p>
+
+  <!--Trigger-->
+  <p>
+    {{ (authService.user | async)?.email }} responses
+  </p>
+
+
+  <!--Trigger-->
+  <p>
+   all posts
+  </p>
+  <ul>
+    <li *ngFor="let item of items | async">
+      Title: {{item.title}} Created: {{item.created}} Edited: {{item.edited}} Content: {{item.content}}
+    </li>
+  </ul>
+  <!--Trigger-->
+  <p>
+    all responses
+   </p>
+   <ul>
+     <li *ngFor="let item of responses | async">
+       Created: {{item.created}} Post: {{item.post}}
+     </li>
+   </ul>
+</div>
