--- a/cs-collaboration-platform/src/app/posts/posts.component.html
+++ b/cs-collaboration-platform/src/app/posts/posts.component.html
@@ -7,11 +7,16 @@
   <p>
     {{ (authService.user | async)?.email }} posts
   </p>
-
+  <ul *ngFor="let item of items | async">
+   <p *ngIf="(authService.user | async)?.email && this.contains(item.id, ((authService.user | async)?.email))" > ID: {{item.id}} Title: {{item.title}} Created: {{item.created}} Edited: {{item.edited}} Content: {{item.content}}</p> 
+  </ul>
   <!--Trigger-->
   <p>
     {{ (authService.user | async)?.email }} responses
   </p>
+  <ul *ngFor="let item of responses | async">
+    <p *ngIf="(authService.user | async)?.email && this.contains(item.id, ((authService.user | async)?.email))" > ID: {{item.id}} Title: {{item.post}} Created: {{item.created}} Content: {{item.content}}</p> 
+  </ul>
 
 
   <!--Trigger-->
@@ -20,7 +25,7 @@
   </p>
   <ul>
     <li *ngFor="let item of items | async">
-      Title: {{item.title}} Created: {{item.created}} Edited: {{item.edited}} Content: {{item.content}}
+      ID: {{item.id}} Title: {{item.title}} Created: {{item.created}} Edited: {{item.edited}} Content: {{item.content}}
     </li>
   </ul>
   <!--Trigger-->
@@ -29,7 +34,7 @@
    </p>
    <ul>
      <li *ngFor="let item of responses | async">
-       Created: {{item.created}} Post: {{item.post}}
+      ID: {{item.id}} Post: {{item.post}} Created: {{item.created}} Content: {{item.content}}
      </li>
    </ul>
 </div>
