--- a/cs-collaboration-platform/src/app/demo/demo.component.html
+++ b/cs-collaboration-platform/src/app/demo/demo.component.html
@@ -4,28 +4,33 @@
       Email: {{item.email}} Username: {{item.username}} Admin: {{item.admin}}
     </li>
 </ul>
-email   
+<div>email</div>   
     <input #box type="email" [(ngModel)]="enterEmail" name="myEmail" #myEmail="ngModel" 
     email pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}" required>
     <p *ngIf="this.validEmail">{{box.value}} is a valid email</p>  
     <p *ngIf="!this.validEmail">{{box.value}} is invalid email</p>  
-username
+
+<div>username</div>
     <input #box2 type="text" [(ngModel)]="enterUsername" name="myUsername" #myUsername="ngModel" 
     username pattern="[a-zA-Z0-9.-_]{6,8}" required>    
     <!-- <input #box2 (keyup)="0"> -->
     <p>{{box2.value}}</p>
     <p *ngIf="this.validUsername">{{box2.value}} is a valid username</p>  
     <p *ngIf="!this.validUsername">{{box2.value}} is invalid username</p>
-admin    
+ 
+<div>admin</div>   
   <input #box3 (keyup)="0">
     <p>{{box3.value}}</p>  
-<button (click)="checkForUser(box.value, box2.value, box3.value)">check for user!</button> 
-<button *ngIf="this.allowed" (click)="addUser(box.value, box2.value, box3.value)">add user!</button> 
+<button class="btn btn-outline-black btn-rounded" (click)="checkForUser(box.value, box2.value, box3.value)">check for user!</button> 
+<button *ngIf="this.allowed" class="btn btn-outline-green btn-rounded" (click)="addUser(box.value, box2.value, box3.value)">add user!</button> 
 <ul>
     <li *ngFor="let current of currents | async">
       {{current.username}}
     </li>
-</ul>  
+</ul> 
+
+
+
 
 
 
