--- a/cs-collaboration-platform/src/app/login/login.component.html
+++ b/cs-collaboration-platform/src/app/login/login.component.html
@@ -5,10 +5,9 @@
  
   <div>Password</div>
     <input type="text" [(ngModel)]="enterPassword" name="myPassword" #myPassword="ngModel" 
-    username pattern="[a-zA-Z0-9.-_]{6,8}" required>    
+     required>    
     <!-- <input #box2 (keyup)="0"> -->
     <p>{{myPassword.value}}</p>  
     <!-- <p *ngIf="!this.validAdminKey">{{myPassword.value}} is invalid admin key, try again</p> -->
 
-<button class="btn btn-outline-black btn-rounded" (click)="signUp(myEmail.value, myUsername.value, myPassword.value, myAdminKey.value)">Sign Up</button> 
-<button class="btn btn-outline-black btn-rounded" (click)="deletePost()">delete test</button> 
+<button class="btn btn-outline-black btn-rounded" (click)="login(myEmail.value, myPassword.value)">Log in</button> 
