--- a/cs-collaboration-platform/src/app/myposts/myposts.component.html
+++ b/cs-collaboration-platform/src/app/myposts/myposts.component.html
@@ -1,25 +1,28 @@
 
   <div *ngIf="authService.user | async">
-  
+    
     <!--Trigger-->
     <p>
       {{ (authService.user | async)?.email }} posts
     </p>
+   
     <ul *ngFor="let item of items | async">
-     <div *ngIf="(authService.user | async)?.email && this.contains(item.id, ((authService.user | async)?.email))" > 
-       ID: {{item.id}} Title: {{item.title}} Created: {{item.created}} Edited: {{item.edited}} Content: {{item.content}}
+    <div *ngIf="(authService.user | async)?.email && this.contains(item.id, ((authService.user | async)?.email))" class="card" > 
+        
+       <h4 class="card-title"><a>{{item.title}}</a></h4>
+       <h5 class="card-title"><a>ID: {{item.id}} Created: {{item.created}} Edited: {{item.edited}} </a></h5>
+       <p class="card-text">{{item.content}}</p>
        <button class="btn btn-outline-blue btn-rounded" (click)="showMyEdit()">update</button><button class="btn btn-outline-red btn-rounded" (click)="deletePost()">delete</button> 
        
       <div *ngIf="showEdit">
        
     
-      <div>Update</div>
+       <div>Update</div>
        <input type="text" [(ngModel)]="editText" name="myEdit" #myEdit="ngModel" 
          required>    
        
       
        <button class="btn btn-outline-black btn-rounded" (click)="updatePost(item.id, this.myEdit.model)">Submit</button> 
-       <button class="btn btn-outline-black btn-rounded" (click)="deletePost()">delete test</button> 
       </div>
     </div>
      
