--- a/cs-collaboration-platform/src/app/register/register.component.html
+++ b/cs-collaboration-platform/src/app/register/register.component.html
@@ -24,3 +24,4 @@
     <p>{{myAdminKey.value}}</p>  
     <!-- <p *ngIf="!this.validAdminKey">{{myAdminKey.value}} is invalid admin key, try again</p>  -->
 <button class="btn btn-outline-black btn-rounded" (click)="signUp(myEmail.value, myUsername.value, myPassword.value, myAdminKey.value)">Sign Up</button> 
+<button class="btn btn-outline-black btn-rounded" (click)="addToDB(myEmail.value, myUsername.value, myPassword.value, myAdminKey.value)">add to db</button>
