--- a/cs-collaboration-platform/src/app/home/home.component.html
+++ b/cs-collaboration-platform/src/app/home/home.component.html
@@ -15,13 +15,13 @@
                     
                  
                     <div>Title</div>
-                    <input type="text" [(ngModel)]="addTitle" name="myTitle" #myTitle="ngModel" 
+                    <input type="text" name="myTitle"  
                       required>    
                     <div>Content</div>
-                    <input type="text" [(ngModel)]="editContent" name="myContent" #myContent="ngModel" 
+                    <input type="text" name="myContent" 
                       required>
-                    <a class="btn btn-outline-black btn-rounded" (click)="getPostId()">Click here to submit</a>
-                    <button class="btn btn-outline-black btn-rounded" (click)="addPost(this.myTitle.model, this.myContent.model)">Submit</button> 
+                    <a *ngIf="!this.showSubmitFinalize" class="btn btn-outline-black btn-rounded" (click)="getPostId();changeShowSubmitFinalize();">Submit Post?</a>
+                    <button *ngIf="this.showSubmitFinalize" class="btn btn-outline-black btn-rounded" (click)="addPost(this.myTitle.model, this.myContent.model);changeShowAddPost();changeShowSubmitFinalize();myTitle.value='';myContent.value='';">Click Again to Submit</button> 
                    </div>
                  
         </div>
